<resources>
    <string name="app_name">Project01</string>
    <string-array name="glossary">
        <item>Appointment</item>
        <item>uh POINT ment</item>
        <item>A time to meet or agree to see someone</item>

        <item>Allergy</item>
        <item>AL ler JEE</item>
        <item>Reaction to certain foods or other things, may cause rash, hives, sneezing, or other problems</item>

        <item>Checkup</item>
        <item>CHECK up</item>
        <item>A visit to the doctor when you are not sick, also called a well visit</item>

        <item>Co-Pay</item>
        <item>CO paa</item>
        <item>When you pay a set fee every time you go to the doctor and your health insurance pays the rest</item>

        <item>Emergency</item>
        <item>ee MER gen see</item>
        <item>When there is a serious problem and you need help right away</item>

        <item>Fever</item>
        <item>FEE ver</item>
        <item>When your body temperature is too high</item>

        <item>Fiber</item>
        <item>FI bur</item>
        <item>Foods that help you feel full and helps your stool come out</item>

        <item>Generic Medicine</item>
        <item>Gen AIR ik MED uh sin</item>
        <item>Not a name brand medicine, usually less expensive than the name brand</item>

        <item>Headache</item>
        <item>Hed A eek</item>
        <item>Pain or ache in your head</item>

        <item>Health History</item>
        <item>H elth HISS tor EE</item>
        <item>The health problems you had in the past</item>

        <item>Health Insurance</item>
        <item>H elth In SHER uns</item>
        <item>A program where you pay each month and then the program pays for your health care</item>

        <item>Immunization</item>
        <item>IM yoon ZA Shun</item>
        <item>The process of becoming immune or resistant to an infectious disease, typically by getting vaccines.
            It is good to stay up to date on these and check with your doctor on what you need</item>

        <item>Label</item>
        <item>LA bel</item>
        <item>On the bottle or box to describe the medicine and how to take it</item>

        <item>Medical Interpreter</item>
        <item>MED uh cal in TERP ret er</item>
        <item>A person who is trained to translate information from doctor to patient and from patient to doctor</item>

        <item>Medicine</item>
        <item>MED uh sin</item>
        <item>Used when you are sick or have aches and pain to help make you feel well</item>

        <item>Mililiter</item>
        <item>Mil e LEE Ter</item>
        <item>Measurement of how much liquid medicine is needed Common abbreviation: mL</item>

        <item>Nutrient</item>
        <item>New TRISH ent</item>
        <item>In foods and needed by people to stay healthy</item>

        <item>Nutrition</item>
        <item>New TRISH un</item>
        <item>How the body uses food to stay healthy</item>

        <item>Obesity</item>
        <item>oh BEE sit ee</item>
        <item>Being very overweight, a weight that is dangerous for your health</item>

        <item>Over-the- counter (OTC)</item>
        <item>O ver the COUNT er</item>
        <item>Medicine anyone can buy at a store, you do not need a prescription</item>

        <item>Pharmacy</item>
        <item>FARM uh see</item>
        <item>Where you go to buy medicine</item>

        <item>Pharmacist</item>
        <item>FARM us sist</item>
        <item>A person who works in the pharmacy, a person who fills prescriptions</item>

        <item>Prescription (Rx)</item>
        <item>Pre SCRIP shun</item>
        <item>You need one of these from a doctor to buy some kinds of medicine</item>

        <item>Primary Care Center</item>
        <item>PrI Mar EE Kare Senter</item>
        <item>The place you go for all your basic health care needs, could be a health center, health clinic, or doctor’s office</item>

        <item>Recipe</item>
        <item>Re si PEE</item>
        <item>List of what goes into a meal and how to prepare it</item>

        <item>Side Effect</item>
        <item>SIDE e fekt</item>
        <item>An unwanted result or symptom, you get from taking some medicine</item>

        <item>Sodium</item>
        <item>SO dee um</item>
        <item>Another word for salt</item>

        <item>Sore Throat</item>
        <item>SOR th ROT</item>
        <item>When you throat hurts, it is hard to swallow</item>

        <item>Symptoms</item>
        <item>SIMP tums</item>
        <item>Something that happens in the body that shows you have an injury or illness</item>

        <item>Tablespoon</item>
        <item>T A ble SPU n</item>
        <item>Common abbreviation: Tbsp, Equals 3 teaspoons or 15 mL</item>

        <item>Teaspoon</item>
        <item>Ti SPU n</item>
        <item>Measurement of how much liquid medicine is needed Common abbreviation: tsp Equals 5 mL</item>

        <item>Vaccine</item>
        <item>Vak seen</item>
        <item>Provides immunity against one or several diseases</item>

        <item>Warning Label</item>
        <item>WAR ning LA bel</item>
        <item>Describes dangers and what NOT to do when taking medicine</item>

        <item>Vitamins</item>
        <item>Vita mins</item>
        <item>A kind of nutrient in foods that help fight sickness and keep the body strong and healthy</item>
    </string-array>
    <string-array name="menu">
        <item>Glossary</item>
        <item>Crossword &amp; Word Search</item>
        <item>Name That Part</item>
        <item>Picture Stories</item>
        <item>Speaking Exercises</item>
    </string-array>
    <string-array name="exercise1">
        <item>Health Center: Hello, health center. How may I help you?</item>
        <item>Patient: Hello, this is Fatima Tuma. I want to make an appointment.</item>
        <item>Health Center: How do you spell your name?</item>
        <item>Patient: T U M A</item>
        <item>Health Center: What is the problem?</item>
        <item>Patient: I have a headache and sore throat.</item>
        <item>Health Center: Do you have a fever?</item>
        <item>Patient: No, I don’t.</item>
        <item>Health Center: Okay, come in tomorrow at 10 am.</item>
        <item>Patient: Thank you.</item>
    </string-array>
    <string-array name="speaking1">
        <item>Hello, health center. How may I help you?</item>
        <item>Hello, this is Fatima Tuma. I want to make an appointment.</item>
        <item>How do you spell your name?</item>
        <item>T U M A</item>
        <item>What is the problem?</item>
        <item>I have a headache and sore throat.</item>
        <item>Do you have a fever?</item>
        <item>No, I don’t.</item>
        <item>Okay, come in tomorrow at 10 am.</item>
        <item>Thank you.</item>
    </string-array>
    <string-array name="exercise2">
        <item>Doctor: Hello, my name is Dr. Weston. How may I help you?</item>
        <item>Patient: I have pain in my back.</item>
        <item>Doctor: Do you have any other symptoms?</item>
        <item>Patient: Yes, it hurts when I walk.</item>
        <item>Patient: What is causing my back pain?</item>
        <item>Doctor: I can give you some medicine to help. Take it two times a day.</item>
        <item>Patient: How long should I take the medicine?</item>
        <item>Doctor: Take all the medicine. It should last about one week.</item>
        <item>Patient: Thank you, doctor.</item>
    </string-array>
    <string-array name="speaking2">
        <item>Hello, my name is Dr. Weston. How may I help you?</item>
        <item>I have pain in my back.</item>
        <item>Do you have any other symptoms?</item>
        <item>Yes, it hurts when I walk.</item>
        <item>What is causing my back pain?</item>
        <item>I can give you some medicine to help. Take it two times a day.</item>
        <item>How long should I take the medicine?</item>
        <item>Take all the medicine. It should last about one week.</item>
        <item>Thank you, doctor.</item>
    </string-array>
    <string-array name="exercise3">
        <item>Pharmacist: Hello, how can I help you?</item>
        <item>Patient: I need to find an over-the-counter medicine for allergies.</item>
        <item>Pharmacist: What are your symptoms?</item>
        <item>Patient: I have a headache and sneeze often.</item>
        <item>Pharmacist: Here is a medicine that works for many people. Try this medicine.</item>
        <item>Patient: Will this medicine cause side effects?</item>
        <item>Pharmacist: The label says this medicine may make you feel sleepy.</item>
        <item>Patient: Is there a medicine that will not make me sleepy?</item>
        <item>Pharmacist: Yes, try this one.</item>
        <item>Patient: Thank you.</item>
    </string-array>
    <string-array name="speaking3">
        <item>Hello, how can I help you?</item>
        <item>I need to find an over-the-counter medicine for allergies.</item>
        <item>What are your symptoms?</item>
        <item>I have a headache and sneeze often.</item>
        <item>Here is a medicine that works for many people. Try this medicine.</item>
        <item>Will this medicine cause side effects?</item>
        <item>The label says this medicine may make you feel sleepy.</item>
        <item>Is there a medicine that will not make me sleepy?</item>
        <item>Yes, try this one.</item>
        <item>Thank you.</item>
    </string-array>
    <string-array name="exercise4">
        <item>Larisa: What fruits do you like to eat?</item>
        <item>Marc: I like to eat oranges and apples.</item>
        <item>Larisa: What vegetables do you like to eat?</item>
        <item>Marc: I like to eat broccoli and carrots.</item>
        <item>Larisa: Do you like to eat spinach?</item>
        <item>Marc: No, I do not like to eat spinach. Do you?</item>
        <item>Larisa: No, I do not like spinach, either.</item>
        <item>Larisa: Do you like to eat strawberries?</item>
        <item>Marc: Yes, strawberries are my favorite food.</item>
    </string-array>
    <string-array name="speaking4">
        <item>What fruits do you like to eat?</item>
        <item>I like to eat oranges and apples.</item>
        <item>What vegetables do you like to eat?</item>
        <item>I like to eat broccoli and carrots.</item>
        <item>Do you like to eat spinach?</item>
        <item>No, I do not like to eat spinach. Do you?</item>
        <item>No, I do not like spinach, either.</item>
        <item>Do you like to eat strawberries?</item>
        <item>Yes, strawberries are my favorite food.</item>
    </string-array>
    <string-array name="exercise_List">
        <item>Chapter 1: Health Care</item>
        <item>Chapter 2: Doctors</item>
        <item>Chapter 3: Medicine</item>
        <item>Chapter 4: Healthy Foods</item>
    </string-array>
    <string name="blank"> </string>
    <string name="slogo">Wellness Logo</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="login">Log-In</string>
    <string name="iNext">Next</string>
    <string name="iPrev">Previous</string>
    <string name="iMain">Main Menu</string>
    <string name="iLabelPic">Label Picture</string>
    <string name="iNameAddr">Name and address\nof the pharmacy</string>
    <string name="iPrescNum">Prescription\nnumber</string>
    <string name="iPatName">Patient\'s name</string>
    <string name="iDirections">Directions\nfor use</string>
    <string name="iMedication">Medication\nname,\nstrength, and\ndosage form</string>
    <string name="iQuantity">Quantity dispensed</string>
    <string name="iRefills">Refills left</string>
    <string name="iPrescName">Prescriber\'s name</string>
    <string name="iDateOfFill">Date of filling</string>
    <string name="iAuxLabel">Auxiliary labels</string>
</resources>