<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LabelPic">

    <ImageView
        android:id="@+id/iLabelPicImg"
        android:layout_width="369dp"
        android:layout_height="213dp"
        android:contentDescription="@string/iLabelPic"
        android:src="@drawable/labelpic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.127" />

    <TextView
        android:id="@+id/itextViewNameAddr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iNameAddr"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/iLabelPicImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.196" />

    <TextView
        android:id="@+id/itextViewPrescName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iPrescName"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/iLabelPicImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22000003" />

    <TextView
        android:id="@+id/itextViewDateOfFill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iDateOfFill"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/iLabelPicImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.663"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.219" />

    <TextView
        android:id="@+id/itextViewAuxLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iAuxLabel"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/iLabelPicImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.219" />

    <TextView
        android:id="@+id/itextViewPrescNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iPrescNum"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/iLabelPicImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.403" />

    <TextView
        android:id="@+id/itextViewPatName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iPatName"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/iLabelPicImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.576" />

    <TextView
        android:id="@+id/itextViewDirections"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iDirections"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/iLabelPicImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.757" />

    <TextView
        android:id="@+id/itextViewMedication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iMedication"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.356" />

    <TextView
        android:id="@+id/itextViewQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iQuantity"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/iLabelPicImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.225"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/itextViewRefills"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iRefills"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/iLabelPicImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.582"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/ibuttonNameAddr"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:background="@color/iClear"
        app:layout_constraintBottom_toBottomOf="@+id/iLabelPicImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.37" />

    <Button
        android:id="@+id/ibuttonPrescName"
        android:layout_width="95dp"
        android:layout_height="10dp"
        android:background="@color/iClear"
        app:layout_constraintBottom_toBottomOf="@+id/iLabelPicImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498" />

    <Button
        android:id="@+id/ibuttonPrescNum"
        android:layout_width="60dp"
        android:layout_height="10dp"
        android:background="@color/iClear"
        app:layout_constraintBottom_toBottomOf="@+id/iLabelPicImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.265"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498" />

    <Button
        android:id="@+id/ibuttonPatName"
        android:layout_width="90dp"
        android:layout_height="10dp"
        android:background="@color/iClear"
        app:layout_constraintBottom_toBottomOf="@+id/iLabelPicImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.283"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.535" />

    <Button
        android:id="@+id/ibuttonDateOfFill"
        android:layout_width="45dp"
        android:layout_height="10dp"
        android:background="@color/iClear"
        app:layout_constraintBottom_toBottomOf="@+id/iLabelPicImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.595"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.535" />

    <Button
        android:id="@+id/ibuttonDirections"
        android:layout_width="165dp"
        android:layout_height="30dp"
        android:background="@color/iClear"
        app:layout_constraintBottom_toBottomOf="@+id/iLabelPicImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.37"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.618" />

    <Button
        android:id="@+id/ibuttonMedication"
        android:layout_width="140dp"
        android:layout_height="15dp"
        android:background="@color/iClear"
        app:layout_constraintBottom_toBottomOf="@+id/iLabelPicImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.73" />

    <Button
        android:id="@+id/ibuttonQuantity"
        android:layout_width="30dp"
        android:layout_height="13dp"
        android:background="@color/iClear"
        app:layout_constraintBottom_toBottomOf="@+id/iLabelPicImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.81" />

    <Button
        android:id="@+id/ibuttonRefills"
        android:layout_width="30dp"
        android:layout_height="13dp"
        android:background="@color/iClear"
        app:layout_constraintBottom_toBottomOf="@+id/iLabelPicImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.414"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.808" />

    <Button
        android:id="@+id/ibuttonAuxLabel"
        android:layout_width="90dp"
        android:layout_height="155dp"
        android:background="@color/iClear"
        app:layout_constraintBottom_toBottomOf="@+id/iLabelPicImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.741" />

    <Button
        android:id="@+id/ibuttonPrev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iPrev"
        android:background="@color/iYellow"
        android:onClick="prevBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iLabelPicImg"
        app:layout_constraintVertical_bias="0.503" />

    <Button
        android:id="@+id/ibuttonMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iMain"
        android:background="@color/iNotActive"
        android:onClick="mainBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iLabelPicImg" />

    <Button
        android:id="@+id/ibuttonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iNext"
        android:background="@color/iYellow"
        android:onClick="nextBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.885"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iLabelPicImg"
        app:layout_constraintVertical_bias="0.503" />


</androidx.constraintlayout.widget.ConstraintLayout>